[PerformanceTimeline] Do not throw error when observing invalid types

This CL uses a console warning instead of error when entryTypes is
invalid, which aligns our implementation with the spec and fixes a
test in Performance Timeline. It also removes a stray .expected file.

Bug: 898791

Change-Id: Ie0a0eb0ab4889a062258aab0f3fd967191f1f430
Reviewed-on: https://chromium-review.googlesource.com/c/1374168
Reviewed-by: Yoav Weiss <yoavweiss@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616087}
Former-commit-id: 45e9fe0c7ad77c910dac445afd4bf652b3c9eb4e